<resources>
    <string name="app_name">GPA_oliveiraa_Calculator</string>
    <string name="enter_grades">Please enter all grades</string>
    <string name="range_error">Please enter grades in range 0–100</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="clear_form">Clear Form</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="grade_1">Grade 1:</string>
    <string name="grade_2">Grade 2:</string>
    <string name="grade_3">Grade 3:</string>
    <string name="grade_4">Grade 4:</string>
    <string name="grade_5">Grade 5:</string>
    <string name="your_gpa">Your GPA is:</string>
    <string name="icon_description">Image of a calculator with the word GPA on the screen</string>




</resources>